Bug 168149 - Tip of the day for mailing lists is wrong
Summary: Tip of the day for mailing lists is wrong
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-02 21:29 UTC by Karl Ove Hufthammer
Modified: 2008-08-03 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2008-08-02 21:29:26 UTC
Version:           1.10.0 (using 4.1.1 (KDE 4.1.0 (4.1 >= 20080722)), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24.5-desktop-2mnb

The tip of the day for mailing lists currently says "You can then use\n
<em>Message-&gt;New&nbsp;Message&nbsp;to&nbsp;Mailing&nbsp;List...</em>\n
to open the composer with the mailing list address preset."

This is not true. Only "New Message" appears on the "Message" menu, and this doesn't preset the mailing list in the "To" field.

To send a new message to the mailing list, one has to either right-click on the folder and choose "New Message to Mailing List" or middle-click on the folder. (I think it's better to fix the function to do as the tip says, instead of changing the tip.)
Comment 1 Thomas McGuire 2008-08-03 12:35:44 UTC
SVN commit 841469 by tmcguire:

Bring back the "New Message to Mailinglist" in the Message menu, so that
the tip of the day is correct again.

BUG: 168149


 M  +2 -1      kmail_part.rc  
 M  +10 -6     kmmainwidget.cpp  
 M  +1 -1      kmmainwidget.h  
 M  +2 -1      kmmainwin.rc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=841469