Bring back the "New Message to Mailinglist" in the Message menu, so that the tip of the day is correct again.

BUG: 168149

svn path=/trunk/KDE/kdepim/; revision=841469